--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aleali",
+  "name": "anne alexander",
   "version": "0.0.0",
   "license": "WAVERLY MANDEL",
   "description": "ANNE ALEXANDER",
