--- a/package.json
+++ b/package.json
@@ -14,19 +14,17 @@
   "private": true,
   "author": "Elia Fornari <dev@eliafornari.com> (http://eliafornari.com/)",
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/platform-server": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": "latest",
+    "@angular/common": "latest",
+    "@angular/compiler": "latest",
+    "@angular/core": "latest",
+    "@angular/forms": "latest",
+    "@angular/http": "latest",
+    "@angular/platform-browser": "latest",
+    "@angular/platform-browser-dynamic": "latest",
+    "@angular/platform-server": "latest",
+    "@angular/router": "latest",
     "@types/snapsvg": "^0.4.29",
-    "angular-draggable": "^1.0.1",
     "body-parser": "^1.16.0",
     "core-js": "^2.4.1",
     "ejs": "^2.5.6",
@@ -46,26 +44,25 @@
     "snapsvg": "^0.5.1",
     "snapsvg-cjs": "0.0.6",
     "ts-helpers": "^1.1.1",
-    "typescript": "^2.2.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-beta.31",
-    "@angular/compiler-cli": "^2.4.0",
+    "@angular/cli": "^1.4.5",
+    "@angular/compiler-cli": "latest",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
-    "node-sass": "4.5.3",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
     "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-jasmine": "^1.0.2",
+    "node-sass": "4.5.3",
     "protractor": "~5.1.0",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "~2.0.0"
+    "typescript": "^2.5.3"
   }
 }
